--- a/app/src/main/res/layout/fragment_current_situation.xml
+++ b/app/src/main/res/layout/fragment_current_situation.xml
@@ -6,5 +6,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <androidx.appcompat.widget.Toolbar
+        android:background="@color/teal_700"
+        app:titleTextColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="5dp"
+        app:title="쓰레기 현황"/>
+
+    <TextView
+        android:layout_gravity="center"
+        style="@style/info_content_black_bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="추후 개발 예정입니다." />
+
 
 </LinearLayout>
