--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -4,17 +4,7 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners android:radius="10dp" />
-        </shape>
-    </item>
-    <!-- Border Color -->
-    <item>
-        <shape
-            android:shape="rectangle">
-            <stroke
-                android:width="2dp"
-                android:color="@android:color/black" />
+            <solid android:color="@color/gray" />
             <corners android:radius="10dp" />
         </shape>
     </item>
