--- a/app/src/main/res/layout/activity_trash_request.xml
+++ b/app/src/main/res/layout/activity_trash_request.xml
@@ -131,23 +131,23 @@
                     android:textStyle="bold"
                     android:layout_marginTop="15dp"
                     android:layout_marginHorizontal="15dp"
+                    android:maxLines="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="쓰레기 이름" />
+                    android:text="쓰레기 정보" />
 
                 <TextView
                     android:layout_marginTop="15dp"
                     android:layout_marginHorizontal="15dp"
                     android:padding="15dp"
                     android:background="@drawable/custom_circle_background_gray"
+                    android:layout_marginVertical="15dp"
                     android:id="@+id/tvTrashType"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="테스트"/>
-
+                    android:layout_height="match_parent"
+                    android:text="이 쓰레기는 이렇게 버림"/>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:minHeight="150dp"
