--- a/app/src/main/res/layout/cv_loading_dialog.xml
+++ b/app/src/main/res/layout/cv_loading_dialog.xml
@@ -90,20 +90,24 @@
 
     <androidx.cardview.widget.CardView
         app:layout_constraintTop_toBottomOf="@id/cvCenter"
-        app:layout_constraintStart_toStartOf="@id/cvTop"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/cvTop"
         android:id="@+id/cvBottom"
         android:layout_gravity="center_horizontal"
         app:cardCornerRadius="30dp"
-        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" >
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/custom_circle_background_gray"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:id="@+id/rvLoadingInfoContent"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
