--- a/app/src/main/res/layout/fragment_search_image.xml
+++ b/app/src/main/res/layout/fragment_search_image.xml
@@ -98,12 +98,14 @@
     </androidx.core.widget.NestedScrollView>
 
     <Button
+
+        android:background="@drawable/custom_circle_background_gray"
         android:visibility="invisible"
         android:id="@+id/btnSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="전송"
-        android:minWidth="100dp"
+        android:minWidth="120dp"
         android:minHeight="60dp"
         android:textSize="18sp"
         android:textStyle="bold"
