--- a/app/src/main/res/layout/fragment_onboarding_second.xml
+++ b/app/src/main/res/layout/fragment_onboarding_second.xml
@@ -6,15 +6,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.onboarding.onboardings.OnBoardingSecondFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:textSize="30sp"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="두 번째 화면 꾸미기" />
+
+
+    <ImageView
+        android:layout_marginBottom="100dp"
+        android:padding="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/on_boarding_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
+        android:background="@drawable/cv_rounded_bg"
+        android:paddingHorizontal="30dp"
         android:id="@+id/btnNext"
         android:layout_margin="30dp"
         android:layout_width="wrap_content"
