--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -6,13 +6,21 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="fitCenter"
+        android:background="@drawable/cv_info_rounded_bg"
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/test"/>
+        android:layout_height="300dp"
+        android:src="@drawable/info_1"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
         android:id="@+id/clContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
