--- a/app/src/main/res/layout/fragment_onboarding_first.xml
+++ b/app/src/main/res/layout/fragment_onboarding_first.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.onboarding.onboardings.OnBoardingFirstFragment">
 
     <ImageView
+        android:id="@+id/iv_mark"
         android:layout_marginBottom="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,12 +19,13 @@
 
 
     <TextView
+        android:layout_marginTop="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/bold_style_black"
-        android:text="환경을 위한 "
+        android:text="환경을 위한 최고의 선택"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
