--- a/app/src/main/res/layout/fragment_onboarding_second.xml
+++ b/app/src/main/res/layout/fragment_onboarding_second.xml
@@ -19,6 +19,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/bold_style_black"
+        android:text="재활용 방법을 모르신다구요?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:background="@drawable/cv_rounded_bg"
         android:paddingHorizontal="30dp"
