--- a/app/src/main/res/layout/fragment_onboarding_third.xml
+++ b/app/src/main/res/layout/fragment_onboarding_third.xml
@@ -18,8 +18,16 @@
         android:layout_height="match_parent"
         android:src="@drawable/on_boarding_3" />
 
-
-
+    <TextView
+        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/bold_style_black"
+        android:text="앱을 통해 분리수거 방법을 배우세요!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
         android:background="@drawable/cv_rounded_bg"
