--- a/app/src/main/res/layout/activity_image_result.xml
+++ b/app/src/main/res/layout/activity_image_result.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -53,13 +54,31 @@
 
 
     </androidx.appcompat.widget.Toolbar>
+
+    <TextView
+        android:visibility="invisible"
+        android:id="@+id/tvNoneTrash"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:padding="30dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="식별된 물체가 없습니다.\n\n뒤로가기 버튼을 눌러서\n\n다시 촬영 해 주세요!"
+        android:background="@drawable/custom_circle_background_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:padding="16dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
