--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,13 +10,14 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowLightStatusBar">true</item>
         <!--폰트 색상 설정 -->
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/siam</item>
+
     </style>
     <style name="bold_style_black" parent="Theme.Recycle_App">
         <item name="android:textStyle">bold</item>
@@ -32,5 +33,32 @@
     <style name="icon_style">
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:scaleType">centerInside</item>
+    </style>
+    <style name="icon_style_white">
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="android:tint">@color/white</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:scaleType">centerInside</item>
+    </style>
+
+    <style name="info_title_black_bold">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:background">@drawable/custom_circle_background_gray</item>
+    </style>
+
+    <style name="info_content_black_bold">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_marginBottom">30dp</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/custom_circle_background_gray</item>
     </style>
 </resources>
