--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -84,7 +84,7 @@
                     android:layout_height="2dp"
                     android:background="@color/gray"/>
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/clShowFavorit"
+                    android:id="@+id/clShowFavorite"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
@@ -95,7 +95,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:text="즐겨찾기 목록 보기"/>
+                        android:text="즐겨찾기 전체 목록 보기"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
