그래프 출처 표시

--- a/app/src/main/res/layout/fragment_current_situation.xml
+++ b/app/src/main/res/layout/fragment_current_situation.xml
@@ -43,7 +43,6 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
             android:padding="20dp">
 
         <ImageButton
@@ -76,6 +75,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:text="출처 - 통합 데이터 지도"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 
