--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#F2F5F6</color>
     <color name="siam">#020715</color>
+    <color name="white_grey">#EAEAEA</color>
 </resources>
