--- a/app/src/main/res/layout/cv_process_item.xml
+++ b/app/src/main/res/layout/cv_process_item.xml
@@ -28,7 +28,6 @@
         android:textStyle="bold"
         android:paddingHorizontal="30dp"
         android:paddingVertical="10dp"
-        android:layout_marginVertical="15dp"
         android:layout_marginHorizontal="30dp"
         android:background="@drawable/custom_circle_background_gray"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +35,8 @@
         app:layout_constraintTop_toBottomOf="@id/vpTitleImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="재활용 이름" />
+        android:text="재활용 이름"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="45dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
