--- a/app/src/main/res/layout/fragment_environmental_protection.xml
+++ b/app/src/main/res/layout/fragment_environmental_protection.xml
@@ -4,24 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.info.content.environmental_protection.EnvironmentalProtectionFragment">
-
-    <TextView
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:id="@+id/tvTitle"
-        android:paddingVertical="15dp"
-        android:layout_marginVertical="15dp"
-        android:layout_marginHorizontal="30dp"
-        android:background="@drawable/custom_circle_background_gray"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="재활용품 재생 과정 알아보기" />
+    tools:context=".ui.info.content.recycling.RecyclingProcessFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        android:id="@+id/recyclerview"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginVertical="10dp"
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
