--- a/app/src/main/res/layout/caruta_card_item_mark.xml
+++ b/app/src/main/res/layout/caruta_card_item_mark.xml
@@ -26,6 +26,17 @@
             android:layout_height="90dp" />
 
         <ImageView
+            android:layout_gravity="center"
+            android:id="@+id/imageViewInner"
+            android:layout_margin="10dp"
+            android:src="@color/white"
+            android:scaleType="centerCrop"
+            android:layout_width="60dp"
+            android:layout_height="80dp" />
+
+
+
+        <ImageView
             android:id="@+id/ivRecyclingSymbol"
             android:layout_gravity="center"
             android:layout_width="70dp"
