--- a/app/src/main/res/layout/fragment_in_progress.xml
+++ b/app/src/main/res/layout/fragment_in_progress.xml
@@ -7,12 +7,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
-        android:layout_marginVertical="10dp"
         android:id="@+id/inProgressState"
         layout="@layout/in_progress_state"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="70dp" />
+        android:layout_height="70dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <View
         android:id="@+id/view1"
