--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,7 +160,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:scaleType="centerCrop"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginHorizontal="13dp"
                     android:src="@drawable/bg_game"
                     android:background="@drawable/custom_circle_background_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -175,7 +175,8 @@
                 android:id="@+id/cl2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="8dp">
 
                 <TextView
                     android:id="@+id/tv_title"
