재활용 순환 흐름 추가 정부 블로그 추가 (서버 에러), 게임 입장 버튼 둥글게 변환

--- a/app/src/main/res/layout/cv_process_item.xml
+++ b/app/src/main/res/layout/cv_process_item.xml
@@ -12,6 +12,7 @@
         android:minHeight="250dp" />
 
     <me.relex.circleindicator.CircleIndicator3
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@id/vpTitleImage"
         android:id="@+id/indicator"
         android:layout_height="48dp"
