--- a/app/src/main/res/layout/cv_image_view.xml
+++ b/app/src/main/res/layout/cv_image_view.xml
@@ -2,10 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
-        android:scaleType="fitXY"
+        android:paddingHorizontal="10dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:id="@+id/ivContent"
         android:layout_width="match_parent"
         android:layout_height="250dp"
