--- a/app/src/main/res/layout/fragment_environmental_protection.xml
+++ b/app/src/main/res/layout/fragment_environmental_protection.xml
@@ -16,7 +16,19 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/cv_process_item"
+        android:paddingBottom="50dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        app:fabCustomSize="55dp"
+        app:maxImageSize="30dp"
+        android:src="@drawable/baseline_question_mark_24"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="30dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
